--- a/40861-h/40861-h.htm
+++ b/40861-h/40861-h.htm
@@ -269,7 +269,7 @@ Character set encoding: ISO-8859-1
 
 
 
-Produced by the Bookworm, <bookworm.librivox AT gmail.com>,
+Produced by the Bookworm, &lt;bookworm.librivox AT gmail.com>,
 Ernest Schaal, and the Online Distributed Proofreading
 Team at http://www.pgdp.net (This book was produced from
 scanned images of public domain material from the Google
@@ -19539,7 +19539,7 @@ Convention which Framed the Constitution of the United States, by James Madison
 This and all associated files of various formats will be found in:
         http://www.gutenberg.org/4/0/8/6/40861/
 
-Produced by the Bookworm, <bookworm.librivox AT gmail.com>,
+Produced by the Bookworm, &lt;bookworm.librivox AT gmail.com>,
 Ernest Schaal, and the Online Distributed Proofreading
 Team at http://www.pgdp.net (This book was produced from
 scanned images of public domain material from the Google
